@@ -1,3 +1,8 @@
+Tue Jan 27 15:58:23 2015  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* tool/redmine-backporter.rb: added history feature for platforms which
+	  lack readline.
+
 Mon Jan 26 22:09:35 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
 
 	* .gitignore: ignored temporary file with git.
